Сделал запуск томкета из анта. Простой и дебаг режим.